# joy-clippy

./: .env  Cargo.toml  generate_entity.ps1
entity/src/: entry.rs  lib.rs  prelude.rs
migration/: Cargo.toml
migration/src/: idents.rs  lib.rs  m20220101_000001_create_table.rs
src/: app.rs  clipboard.rs  db.rs  main.rs  tray.rs  tray_icon.rs  utils.rs  window.rs
src/window/: config.rs  history.rs  main.rs  mod.rs  settings.rs
